<!--!DOCTYPE resources [<!ELEMENT resources (string)*><!ELEMENT string (#PCDATA)><!ATTLIST stringname CDATA #REQUIRED>] -->
<resources>
    <string name="app_name">ProjetoVerãoIPPA</string>
    <string name="action_settings" translatable="false">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="log_in" translatable="false">Log in</string>
    <string name="what_s_your_pasword">What\'s your Pasword?</string>
    <string name="what_s_your_user_name">What\'s your User Name?</string>
    <string name="enter_your_username_and_password_to_log_into_your_account">Enter your Username and Password to log into your account</string>
    <string name="what_s_your_user_nameCriarConta">What\'s your User Name?</string>
    <string name="what_s_your_email">What\'s your Email?</string>
    <string name="now_confirm_your_password">Now confirm your Password.</string>
    <string name="what_s_your_password">What\'s your Password?</string>
    <string name="please_enter_the_message_you_want_to_send">Please enter the message you want to send</string>
    <string name="please_select_the_priority_of_you_message">Please select the Priority of you message</string>
    <string name="priority_of_32">Priority of 32</string>
    <string name="log_in_to_make_calls_into_praesensa">Log in to make calls into Praesensa.</string>
    <string name="please_enter_the_zone_to_where_you_want_to_make_the_call">Please enter the zone to where you want to make the call</string>
    <string name="userpasswordincorrect">Username or Password incorrect</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="crate_account">Create Account</string>
    <string name="security_question">Please select a security question</string>
    <string name="security_question_answer">Answer</string>
    <string name="events">Events</string>
    <string name="log_out">Log Out</string>
    <string name="call_center">Call Center</string>
    <string name="create_event">Create Event</string>
    <string name="name_of_the_event">What\'s the Name of your Event?</string>
    <string name="when_to_make_call">Please select when you want to make the Call</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="add_event">Add Event</string>
    <string name="descrption">Add a description to your Event</string>
    <string name="make_call">Make Call</string>
    <string name="multi_selection_item">Zones</string>
    <string name="select_zones">Select the Zones</string>
    <string name="close_clear">Close &amp; Clear</string>
    <string name="smth_missing">Something is missing</string>
    <string name="logged_in">You are logged in</string>
    <string name="name_missing"> Your name is missing</string>
    <string name="email_missing">Your Email is missing</string>
    <string name="pass_missing">Your Password is missing</string>
    <string name="answer_missing">Don\'t forget to answer the question</string>
    <string name="confirm_pass">Don\'t forget to confirm your password</string>
    <string name="pass_match">The Passwords don\'t match</string>
    <string name="user_exists">This User already exists</string>
    <string name="account_created">Your account was successfully created. Now log in to make calls into Praesensa</string>
    <string name="pet">What was the name of your fist pet?</string>
    <string name="videogame">What is your favourite Videogame of all time?</string>
    <string name="restaurant">What is your favourite restaurant?</string>
    <string name="zone_1">Zone 1</string>
    <string name="zone_2">Zone 2</string>
    <string name="zone_3">Zone 3</string>
    <string name="welcome_back">Welcome back</string>
    <string name="event_created">Event created</string>
    <string name="no_zones_selected">There are no zones selected</string>
    <string name="internet_connection">Something is wrong. Please check your Internet connection</string>
    <string name="wrong_answer">Wrong answer</string>
    <string name="pass_reset">Your Password was reset</string>
    <string name="forgot_my_pass">Forgot my Password</string>
    <string name="done">Done</string>
    <string name="enter_new_pass">Enter your new Password</string>
    <string name="confirm_new_pass">Confirm your new Password</string>
    <string name="reset_pass_button">Reset Password</string>
    <string name="securityQuestion">Security Question</string>
    <string name="user_not_found"> User not found</string>
    <string name="zona4">Zone 4</string>
    <string name="date_not_valid">This Date is not valid, please select one that is</string>
    <string name="undo">Undo</string>
    <string name="event">Event</string>
    <string name="name">Name:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="message">Message:</string>
    <string name="description321">Description</string>
    <string name="edit_event">Edit Event?</string>
    <string name="event_edited">Event edited</string>
    <string name="edit">Edit</string>
</resources>