<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditEvent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_the_message_you_want_to_send"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider8"
            app:layout_constraintVertical_bias="0.631" />

        <Spinner
            android:id="@+id/spinnerMessagesEditEvent2"
            android:layout_width="210dp"
            android:layout_height="29dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider8"
            app:layout_constraintVertical_bias="0.696" />

        <Button
            android:id="@+id/buttonEditEvent2"
            style="@style/Widget.Material3.Button"
            android:layout_width="116dp"
            android:layout_height="41dp"
            android:backgroundTint="#333638"
            android:text="@string/edit"
            android:textColor="#FFF"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider8"
            app:layout_constraintVertical_bias="0.844" />

        <EditText
            android:id="@+id/editTextTextEventDescriptionEditEvent2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/descrption"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider8"
            app:layout_constraintVertical_bias="0.503" />

        <TextView
            android:id="@+id/buttonHourPickerEditEvent2"
            style="@style/Widget.Material3.Button"
            android:layout_width="186dp"
            android:layout_height="108dp"
            android:backgroundTint="#333638"
            android:clickable="true"
            android:text="@string/select_time"
            android:textColor="#333638"
            android:textSize="14dp"
            app:iconTint="#333638"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.928"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider8"
            app:layout_constraintVertical_bias="0.324" />

        <TextView
            android:id="@+id/buttonDatePickerEditEvent2"
            style="@style/Widget.Material3.Button"
            android:layout_width="186dp"
            android:layout_height="108dp"
            android:backgroundTint="#333638"
            android:clickable="true"
            android:text="@string/select_date"
            android:textColor="#333638"
            android:textSize="14dp"
            app:iconTint="#333638"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.075"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider8"
            app:layout_constraintVertical_bias="0.326" />

        <TextView
            android:id="@+id/textViewNewEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/create_event"
            android:textAlignment="center"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/divider4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.108"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <View
            android:id="@+id/divider8"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.063" />

        <EditText
            android:id="@+id/editTextTextEventNameEditEvent2"
            android:layout_width="341dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name_of_the_event"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider8"
            app:layout_constraintVertical_bias="0.089" />

        <TextView
            android:id="@+id/textViewSelectTheDay2"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            android:text="@string/when_to_make_call"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider8"
            app:layout_constraintVertical_bias="0.203" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>