<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CallCenter">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundTint="#B81717">

        <!--<Spinner
            android:id="@+id/spinner"
            android:layout_width="210dp"
            android:layout_height="29dp"
            android:animationCache="true"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.205" />-->


        <TextView
            android:id="@+id/logOutTextView"
            android:layout_width="195dp"
            android:layout_height="wrap_content"
            android:text="@string/events"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.078"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.987" />

        <TextView
            android:id="@+id/logOutTextView2"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:text="@string/make_call"
            android:textAlignment="viewEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.94"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.988" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButtonEvents"
            android:layout_width="64dp"
            android:layout_height="59dp"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_my_calendar"
            app:backgroundTint="@color/mtrl_fab_bg_color_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.955" />

        <com.androidbuts.multispinnerfilter.MultiSpinnerSearch
            android:id="@+id/multipleItemSelectionSpinner"
            android:layout_width="210dp"
            android:layout_height="29dp"
            android:layout_margin="10dp"
            app:hintText="@string/multi_selection_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.252" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_the_zone_to_where_you_want_to_make_the_call"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.482"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.177" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:text="@string/please_select_the_priority_of_you_message"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.664" />

        <Spinner
            android:id="@+id/spinnerMessages"
            android:layout_width="210dp"
            android:layout_height="29dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.485" />

        <SeekBar
            android:id="@+id/seekBarPriority"
            android:layout_width="207dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:max="200"
            android:progress="32"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.724" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_the_message_you_want_to_send"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.467"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.416" />

        <TextView
            android:id="@+id/textViewPriority"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/priority_of_32"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.891"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.77" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/makeCall"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:src="@android:drawable/stat_sys_phone_call"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.955" />

        <TextView
            android:id="@+id/textViewCallCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call_center"
            android:textAlignment="center"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.072"
            tools:layout_editor_absoluteX="1dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>